# scrutiny

./: .eslintrc.json  .gitignore  .oxlintrc.json  DEVELOPMENT.md  LICENSE  PLUGIN.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  index.html  package-lock.json  package.json  setup.sh  vitest.config.ts
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
claude-plugin/: install.sh
claude-plugin/.claude-plugin/: manifest.json  plugin.json
claude-plugin/hooks/: edit-plan.sh
e2e/: plan-review.spec.ts
hooks/: hooks.json
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
