[package]
name = "scrutiny"
version = "0.1.0"
description = "Fast native plan editor for Claude Code"
authors = ["Jack"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = { version = "2.4", features = ["inline"] }
